--- a/src/features/SystemUserPanel/SystemUserPanel.scss
+++ b/src/features/SystemUserPanel/SystemUserPanel.scss
@@ -19,6 +19,10 @@
     transform: translateX(0);
   }
 
+  &__wrapper {
+    height: 100%;
+  }
+
   &__heading {
     margin: 0;
   }
